--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -3,18 +3,21 @@
 
 .header-bg {
   background-color: #2a9d8f;
+  background: linear-gradient(to right, #2a9d8f, #264653);
   color: #ffffff;
-  border-radius: 4px;
+  border-radius: 15px;
+  margin-left: 350px;
+  margin-right: 450px;
   display: flex;
 	align-items: center;
   justify-content: center;
 }
 
 .title {
-  color: #264653;
+  color: #020405;
 	font-size: 50px;
   margin-left: 20px;
-  margin-top: 70px;
+  margin-top: 50px;
 }
 
 .rounded-img {
@@ -29,14 +32,18 @@ h1, h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 35px;
 }
 
 h2 {
-  font-size: 30px;
+  border: none;
+  background: linear-gradient(to right, #007bff, #2d5362);
+  margin-top: 100px;
+  font-size: 50px;
+  border-radius: 15px;
 }
 
 p {
   color: #f1faee;
   margin-bottom: 48px;
+  text-align: justify;
 }
