Added centering for all paragraph text

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -15,7 +15,10 @@
 	}
 	p {
 		@apply text-paragraph;
-		text-align: justify;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 	}
 }
 
