--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -7,18 +7,25 @@
 		@apply text-author font-bold;
 	}
 	h2 {
-		@apply text-header font-bold;
+		@apply text-header;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		font-size: 2.5rem;
+		padding-top: 25px;
+		padding-bottom: 10px;
 	}
 	p {
 		@apply text-paragraph;
+		font-size: 1.1rem;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		text-align: justify;
+		padding-left: 25vw;
+		padding-right: 25vw;
 	}
 }
 
