--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -16,7 +16,7 @@
 		padding-top: 25px;
 		padding-bottom: 10px;
 	}
-	p {
+	p, ul {
 		@apply text-paragraph;
 		font-size: 1.1rem;
 		display: flex;
@@ -52,4 +52,28 @@ header {
 header > h1 {
 	font-size: 3rem; /* adjust as needed */
 	margin-top: 5px;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-gap: 20px;
+}
+
+.project {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.project img {
+	width: 100%;
+	height: auto;
+	margin-bottom: 10px;
+}
+
+.project p {
+	font-size: 16px;
+	font-weight: bold;
+	text-align: center;
 }
