--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -57,13 +57,18 @@ header > h1 {
 	margin-top: 5px;
 }
 
-.list-wrapper {
+.roundedBG {
 	background-color: theme('colors.headerBG');
-	border-radius: 50%;
+	margin-left: 100px;
+	margin-right: 100px;
+	border-radius: 25px;
+}
+
+.list-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	padding-left: 20vw;
-	padding-right: 20vw;
+	padding-left: 50px;
+	padding-right: 50px;
 	padding-bottom: 15px;
 	padding-top: 15px;
 }
