--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,38 +4,32 @@
 
 @layer utilities {
 	h1 {
-		@apply text-author font-bold;
+		@apply text-author font-bold text-center;
 	}
 	h2 {
 		@apply text-header;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		font-size: 2.5rem;
-		padding-top: 25px;
-		padding-bottom: 10px;
+		font-size: 2rem;
+		padding-top: 10px;
+		padding-bottom: 5px;
+		text-align: center;
 	}
 	p {
 		@apply text-paragraph;
-		font-size: 1.1rem;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
+		font-size: 0.9rem;
 		text-align: justify;
-		padding-left: 25vw;
-		padding-right: 25vw;
+		padding-left: 5vw;
+		padding-right: 5vw;
 	}
 	li {
 		@apply text-paragraph;
+		font-size: 0.9rem;
 	}
 }
 
 .rounded-img {
 	border-radius: 50%;
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 100px;
 }
 
 div {
@@ -48,42 +42,42 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 35vh;
-	padding-top: 10px;
+	height: 25vh;
+	padding-top: 5px;
 }
 
 header > h1 {
-	font-size: 3rem; /* adjust as needed */
+	font-size: 2rem;
 	margin-top: 5px;
 }
 
 .roundedBG {
 	background-color: theme('colors.headerBG');
-	margin-left: 100px;
-	margin-right: 100px;
-	border-radius: 25px;
+	margin-left: 20px;
+	margin-right: 20px;
+	border-radius: 10px;
 }
 
 .list-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	padding-left: 50px;
-	padding-right: 50px;
-	padding-bottom: 15px;
-	padding-top: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	padding-top: 5px;
 }
 
 .list-wrapper > li {
-	flex-basis: 25%;
-	max-width: 25%;
-	font-size: 1.1rem;
+	flex-basis: 50%;
+	max-width: 50%;
+	font-size: 0.9rem;
 	@apply list-disc;
 }
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: 20px;
+	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	grid-gap: 10px;
 }
 
 .project {
@@ -91,17 +85,17 @@ header > h1 {
 	flex-direction: column;
 	align-items: center;
 	background-color: theme('colors.headerBG');
-	border-radius: 20%;
+	border-radius: 10%;
 }
 
 .project img {
-	width: 50%;
+	width: 80%;
 	height: auto;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 .project p {
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: bold;
 	text-align: center;
 }
