--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,32 +4,38 @@
 
 @layer utilities {
 	h1 {
-		@apply text-author font-bold text-center;
+		@apply text-author font-bold;
 	}
 	h2 {
 		@apply text-header;
-		font-size: 2rem;
-		padding-top: 10px;
-		padding-bottom: 5px;
-		text-align: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		font-size: 2.5rem;
+		padding-top: 25px;
+		padding-bottom: 10px;
 	}
 	p {
 		@apply text-paragraph;
-		font-size: 0.9rem;
+		font-size: 1.1rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 		text-align: justify;
-		padding-left: 5vw;
-		padding-right: 5vw;
+		padding-left: 25vw;
+		padding-right: 25vw;
 	}
 	li {
 		@apply text-paragraph;
-		font-size: 0.9rem;
 	}
 }
 
 .rounded-img {
 	border-radius: 50%;
-	width: 100px;
-	height: 100px;
+	width: 150px;
+	height: 150px;
 }
 
 div {
@@ -42,42 +48,42 @@ header {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 25vh;
-	padding-top: 5px;
+	height: 35vh;
+	padding-top: 10px;
 }
 
 header > h1 {
-	font-size: 2rem;
+	font-size: 3rem; /* adjust as needed */
 	margin-top: 5px;
 }
 
 .roundedBG {
 	background-color: theme('colors.headerBG');
-	margin-left: 20px;
-	margin-right: 20px;
-	border-radius: 10px;
+	margin-left: 100px;
+	margin-right: 100px;
+	border-radius: 25px;
 }
 
 .list-wrapper {
 	display: flex;
 	flex-wrap: wrap;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-bottom: 5px;
-	padding-top: 5px;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 15px;
+	padding-top: 15px;
 }
 
 .list-wrapper > li {
-	flex-basis: 50%;
-	max-width: 50%;
-	font-size: 0.9rem;
+	flex-basis: 25%;
+	max-width: 25%;
+	font-size: 1.1rem;
 	@apply list-disc;
 }
 
 .grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-gap: 20px;
 }
 
 .project {
@@ -85,17 +91,43 @@ header > h1 {
 	flex-direction: column;
 	align-items: center;
 	background-color: theme('colors.headerBG');
-	border-radius: 10%;
+	border-radius: 20%;
 }
 
 .project img {
-	width: 80%;
+	width: 50%;
 	height: auto;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 .project p {
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: bold;
 	text-align: center;
+}
+
+@media (min-width: 768px) {
+	h1 {
+		font-size: 4rem;
+	}
+
+	h2 {
+		font-size: 3rem;
+		padding-top: 50px;
+		padding-bottom: 20px;
+	}
+
+	p {
+		font-size: 1.5rem;
+		padding-left: 15vw;
+		padding-right: 15vw;
+	}
+
+	.list-wrapper > li {
+		font-size: 1.3rem;
+	}
+
+	.project p {
+		font-size: 18px;
+	}
 }
